@@ -1,76 +1,113 @@
 package com.cine.demo.service.impl;
 
 import com.cine.demo.dto.request.MovieRequestDTO;
-import com.cine.demo.dto.request.UpdateMovieRequestDTO;
 import com.cine.demo.dto.response.MovieResponseDTO;
-import com.cine.demo.exception.ConflictException;
-import com.cine.demo.exception.ResourceNotFoundException;
-import com.cine.demo.mapper.MovieMapper;
 import com.cine.demo.model.Movie;
+import com.cine.demo.model.enums.AgeRating;
 import com.cine.demo.repository.MovieRepository;
-import com.cine.demo.service.CloudinaryService;
 import com.cine.demo.service.MovieService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
+
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional
 public class MovieServiceImpl implements MovieService {
 
     private final MovieRepository movieRepository;
-    private final MovieMapper movieMapper;
-    private final CloudinaryService cloudinaryService;
 
     @Override
-    @Transactional(readOnly = true)
-    public List<MovieResponseDTO> getAll() {
+    public List<MovieResponseDTO> findAll() {
         return movieRepository.findAll().stream()
-                .map(movieMapper::toResponseDto)
-                .toList();
+                .map(this::toDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public MovieResponseDTO getById(Long id) {
-        return movieMapper.toResponseDto(findOrThrow(id));
+    public List<MovieResponseDTO> findActive() {
+        return movieRepository.findByActiveTrue().stream()
+                .map(this::toDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public MovieResponseDTO create(MovieRequestDTO dto) {
-        if (movieRepository.existsByTitulo(dto.getTitulo())) {
-            throw new ConflictException("Ya existe una película con el título: " + dto.getTitulo());
-        }
-        return movieMapper.toResponseDto(movieRepository.save(movieMapper.toEntity(dto)));
+    public MovieResponseDTO findById(Long id) {
+        Movie movie = movieRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Movie not found"));
+        return toDTO(movie);
     }
 
     @Override
-    public MovieResponseDTO update(Long id, UpdateMovieRequestDTO dto) {
-        Movie movie = findOrThrow(id);
-        movieMapper.updateEntityFromDto(dto, movie);
-        return movieMapper.toResponseDto(movieRepository.save(movie));
+    public MovieResponseDTO save(MovieRequestDTO dto, MultipartFile image) {
+        Movie movie = Movie.builder()
+                .title(dto.getTitle())
+                .description(dto.getDescription())
+                .genre(dto.getGenre())
+                .durationMin(dto.getDurationMin())
+                .ageRating(dto.getAgeRating())
+                .imageUrl(saveImage(image))
+                .active(true)
+                .createdAt(LocalDateTime.now())
+                .build();
+        movie = movieRepository.save(movie);
+        return toDTO(movie);
+    }
+
+    @Override
+    public MovieResponseDTO update(Long id, MovieRequestDTO dto) {
+        Movie movie = movieRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Movie not found"));
+        movie.setTitle(dto.getTitle());
+        movie.setDescription(dto.getDescription());
+        movie.setGenre(dto.getGenre());
+        movie.setDurationMin(dto.getDurationMin());
+        movie.setAgeRating(dto.getAgeRating());
+        movie = movieRepository.save(movie);
+        return toDTO(movie);
     }
 
     @Override
     public void delete(Long id) {
-        if (!movieRepository.existsById(id)) {
-            throw new ResourceNotFoundException("Película no encontrada con id: " + id);
+        Movie movie = movieRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Movie not found"));
+        movie.setActive(false);
+        movieRepository.save(movie);
+    }
+
+    private MovieResponseDTO toDTO(Movie movie) {
+        return MovieResponseDTO.builder()
+                .id(movie.getId())
+                .title(movie.getTitle())
+                .description(movie.getDescription())
+                .genre(movie.getGenre())
+                .durationMin(movie.getDurationMin())
+                .ageRating(movie.getAgeRating())
+                .imageUrl(movie.getImageUrl())
+                .active(movie.getActive())
+                .createdAt(movie.getCreatedAt())
+                .build();
+    }
+
+    private String saveImage(MultipartFile image) {
+        if (image == null || image.isEmpty()) {
+            return null;
         }
-        movieRepository.deleteById(id);
-    }
-
-    @Override
-    public MovieResponseDTO uploadPoster(Long id, MultipartFile file) {
-        Movie movie = findOrThrow(id);
-        movie.setPosterUrl(cloudinaryService.uploadImage(file, "posters"));
-        return movieMapper.toResponseDto(movieRepository.save(movie));
-    }
-
-    private Movie findOrThrow(Long id) {
-        return movieRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Película no encontrada con id: " + id));
+        try {
+            String fileName = System.currentTimeMillis() + "_" + image.getOriginalFilename();
+            Path path = Paths.get("uploads/movies/" + fileName);
+            Files.createDirectories(path.getParent());
+            Files.write(path, image.getBytes());
+            return "/uploads/movies/" + fileName;
+        } catch (IOException e) {
+            throw new RuntimeException("Error saving image", e);
+        }
     }
 }
